* 1.3.5

    - added support for "contextmenu" event bind, on jsPlumb, Connection and Endpoint.
    - added setSuspendDrawing method: use it to suspend drawing while you bulk connect etc.

* 1.3.4

    backwards compatibility :


    - detachEverything method removed from jsPlumb. use detachEveryConnection instead.

    - detachAll method removed. use detachAllConnections instead.

    - removed labelStyle from Label overlay.  to set fonts/border/background, use a cssClass now.

    - removed the notion of jsplumb making everything draggable by default.  it is now the user's responsibility
	to ensure everything is draggable.  use jsPlumb.draggable for this, still, of course, or jsPlumb won't
	know about your draggable elements.

	- removed endpointsOnTop parameter from Connection. You can achieve this effect through cssClass.

    new functionality :

    - detachEveryConnection and detachAllConnections supports a parameter object now; valid values on this release
      are 'fireEvent', the default for which is true.

    - added 'detachable' parameter to jsPlumb.connect, to indicate whether or not a connection should be allowed to be
      dragged off its endpoints (and possibly discarded; use this in conjunction with 'reattach'). defaults to false.

    - added 'connectionsDetachable' parameter to jsPlumb.addEndpoint/jsPlumb.makeSource/jsPlumb.makeTarget.  does the
      same thing as 'detachable' on jsPlumb.connect, discussed above.

    - added isDetachable/setDetachable methods to Connection.

    - added jsPlumb.Defaults.ConnectionsDetachable

	- added 'previousConnection' to a connection that has been moved. when you get a
	jsPlumbConnectionDetached method, that connection passed in will have this member
	set, if it was an existing connection that was just moved.

    - added 'onload' parameter to Endpoint (for use when constructing an Image endpoint)

	- added getSelector method to jsPlumb library adapters; exposes the ability to abstract out a list 